0024575: Exception is raised during 'checkshape' operation.

Recursion calling of "Propagate(...)" function is replaced with cycle.
Test case for issue CR24575